<resources>
    <string name="app_name">eRead</string>
    <string name="sign_up"><b>Sign Up</b> </string>
    <string name="login"><b>Login</b></string>
    <string name="log_in"><b><u> log in now </u></b></string>
    <string name="create_acc"><u><b>Create new one</b></u></string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="success_update"> Update Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library">Library of Malaysia</string>
    <string name="find_books">Find Books</string>
    <string name="wishing_list">Wishing List</string>
    <string name="audio">Audio Book</string>
    <string name="slogan">Read, Lead, Success</string>
    <string name="copyright">-@2021, Sii Yew Hei-</string>

    <string name="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>

    <string name="version">Version 1.1.0</string>
    <string name="app_desc">This is an application with  Digital Library theme.</string>
    <string name="dev_date">2021</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
</resources>