<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_white100"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="About"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/purple_900"
            android:fontFamily="@font/open_sans_bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            app:cardCornerRadius="15dp"
            android:layout_marginBottom="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/open_sans_bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/app_desc"
            android:layout_gravity="center"
            android:justificationMode="inter_word"
            android:fontFamily="@font/open_sans_bold"
            android:textSize="13sp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/btn_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Out"
            android:padding="20dp"
            android:fontFamily="@font/open_sans_regular"
            android:background="@drawable/button_shadow"
            android:textColor="@color/red_500"
            />
        <TextView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:paddingTop="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="125dp"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/dev_date"
            android:layout_gravity="center"
            android:textAlignment="center"/>
    </LinearLayout>

</RelativeLayout>