<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_purple2"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/bar_app_name"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo_transparent_crop" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bar_app_name"
            android:minHeight="555dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="555dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_recommendation"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="30dp"
                    app:cardCornerRadius="25dp"
                    app:cardPreventCornerOverlap="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <VideoView
                        android:id="@+id/recommendation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="latest announcement"
                        android:scaleType="fitXY" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/volume"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/ic_volume_up" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_search_book"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_home_shadow"
                    android:clickable="true"
                    android:elevation="50dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:outlineAmbientShadowColor="@color/red_500"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="35dp"
                        android:src="@drawable/books" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:text="@string/find_books"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_next" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_library"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_home_shadow"
                    android:clickable="true"
                    android:elevation="20dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="35dp"
                        android:src="@drawable/collection" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/library"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_next" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_audio_list"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="100dp"
                    android:background="@drawable/button_home_shadow"
                    android:clickable="true"
                    android:elevation="20dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="35dp"
                        android:src="@drawable/sound" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/audio"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_next" />
                </androidx.cardview.widget.CardView>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>
    </RelativeLayout>
</ScrollView>